--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Currículo online de Reinaldo Coelho, desenvolvedor de software.">
-    <meta name="keywords" content="currículo, portfolio, desenvolvedor, Reinaldo Coelho, tecnologia">
-    <meta name="author" content="Reinaldo Coelho">
-    <title>Currículo - Reinaldo Coelho</title>
+    <meta name="description" content="Currículo online de Fulano de Tal, desenvolvedor de software.">
+    <meta name="keywords" content="currículo, portfolio, desenvolvedor, Fulano de Tal, tecnologia">
+    <meta name="author" content="Fulano de Tal">
+    <title>Currículo - Fulano de Tal</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/png" href="https://avatars.githubusercontent.com/u/165790519?v=4">
 </head>
@@ -21,9 +21,9 @@
             <div class="header-placeholder"></div>
             <div class="profile-container">
                 <div class="profile-inner">
-                    <img class="profile-image" src="https://avatars.githubusercontent.com/u/165790519?v=4" alt="Foto de perfil de Reinaldo Coelho">
+                    <img class="profile-image" src="" alt="Foto de perfil de Fulano de Tal">
                     <div class="profile-header">
-                        <h1 id="nome-header">Reinaldo Coelho</h1>
+                        <h1 id="nome-header">Fulano de Tal</h1>
                     </div>
                 </div>
                 <div class="contact-info">
@@ -44,9 +44,9 @@
         </header>
         <div class="fixed-header">
             <div class="fixed-header-inner">
-                <img class="fixed-profile-image" src="https://avatars.githubusercontent.com/u/165790519?v=4" alt="Foto de perfil de Reinaldo Coelho">
+                <img class="fixed-profile-image" src="" alt="Foto de perfil de Fulano de Tal">
                 <div class="fixed-profile-header">
-                    <h1 id="fixed-nome-header">Reinaldo Coelho</h1>
+                    <h1 id="fixed-nome-header">Fulano de Tal</h1>
                 </div>
             </div>
         </div>
@@ -98,7 +98,7 @@
         </section>
 
         <footer>
-            <p>© 2025 <span id="nome-footer">Reinaldo Coelho</span>.</p>
+            <p>© 2025 <span id="nome-footer">Fulano de Tal</span>.</p>
             <div class="footer-wave">
                 <button id="save-pdf-button" class="save-pdf-button">
                     <svg viewBox="0 0 24 24" width="20" height="20">
